figuring some things out. Compare page is having z-index issues. Done for the night

--- a/compare.css
+++ b/compare.css
@@ -1,4 +1,5 @@
 /* Mobile-first styling for viewport size 360x800 */
+/* Chrome dev tools mobile dimensions ~415x885 */
 
 @font-face {
     font-family: pokemon-hollow;
@@ -12,114 +13,119 @@ body {
 }
 
 #app-container {
-    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
 }
 
 #app-title {
     font-family: pokemon-hollow;
-    color: yellow;
-    font-size: 150px;
-    margin-top: 20px;
-    margin-bottom: 0;
+    font-size: 55px;
+    color: #e5c531;
+    margin: 0;
 }
 
 #navbar {
     width: 100vw;
-    border-top: 3px solid black;
-    border-bottom: 3px solid black;
-    height: 6em;
+    padding: 10px 0;
     display: flex;
-    justify-content: space-around;
+    flex-direction: row;
     align-items: center;
-    margin-bottom: 4em;
+    justify-content: space-around;
+    gap: 10px;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
 }
 
 .nav-btn {
-    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-size: 20px;
 }
 
 #search-instructions {
-    font-size: 35px;
+    font-size: 20px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     padding: 0 10px;
 }
+
 #search-instructions em {
-    font-size: 25px;
+    font-size: 15px;
 }
 
 #compare_container {
-    margin: 0;
+    width: 90svw;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    margin-top: 40px;
-    width: 100svw;
-    height: 70svh;
 }
 
 #textbox1,
 #textbox2 {
-    font-size: 60px;
-    text-align: center;
     border: none;
+    font-size: 25px;
+    text-align: center;
+}
+
+::-webkit-input-placeholder {
+    white-space: pre-line;
+}
+
+#textbox1:focus,
+#textbox2:focus {
+    outline: 0;
 }
 
 #compare {
-    margin-top: 20px;
-    font-size: 40px;
+    font-size: 18px;
     border: none;
-    padding: 20px;
+    padding: 6px 10px;
     background-color: #ea7a3c;
     color: black;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
 
-#compare:active {
-    background-color: linear-gradient(180deg, #ea7a3c 0%, #80360e, 80%);
-}
-
 #modals {
+    border: 4px solid blue;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    gap: 20px;
-    width: 100%;
-    height: 100%;
+    gap: 10px;
+    height: 70svh;
+    width: 90svw;
+    /* position: absolute;
+    top: 12em; */
 }
 
 #modal_screen,
 #modal_screen2 {
     display: none;
-    text-align: center;
-    top: 10em;
-    width: 45%;
-    height: 100%;
-    margin-top: -20em;
-    overflow: scroll;
     background-color: white;
+    text-align: center;
+    width: 80%;
+    overflow: scroll;
 }
 
 #close,
 #close2 {
-    font-size: 47px;
-    margin-bottom: 40px;
+    border: none;
+    margin-top: 15px;
+    padding: 5px 20px;
+    background-color: #ea7a3c;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    margin: 20px auto 40px auto;
 }
 
 #footer {
-    width: 100svw;
     position: absolute;
-    bottom: 15px;
+    bottom: 1em;
+    width: 100svw;
 }
 
 #footer img {
