--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body {
 
 #pokedex {
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 100%;
     height: 70vh;
 }
@@ -127,4 +127,31 @@ body {
     position: absolute;
     top: 24.2em;
     right: 11em;
+}
+
+#modal_screen {
+    display: none;
+    text-align: center;
+    position: absolute;
+    font-size: 25px;
+    width: 80%;
+    height: 25em;
+    top: -2em;
+    margin-left: 10%;
+    overflow: scroll;
+    background-color: white;
+}
+
+#modal-close {
+    border: none;
+    padding: 5px 20px;
+    background-color: #ea7a3c;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    margin: 20px auto 40px auto;
+}
+
+#picture {
+    width: 50%;
 }
